[package]
name = "rust_web_backend_project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }

# Axum
axum = "0.7.1"
tower-http ={ version = "0.5.0", features = ["fs"]}
tower-cookies ="0.10.0" 
# Serde/JSON
serde = {version = "1.0.193", features = ["derive"]}
serde_json = "1.0.108"

anyhow = "1.0.75"
reqwest = { version = "0.11.22 ", features = ["json"] }
